--- a/Practica_format_html.html
+++ b/Practica_format_html.html
@@ -71,7 +71,7 @@
 
 	  <h1>Conclusiones</h1>   
 		<p>HTML es necesario para estructurar el contenido de las web que hoy conocemos y sin duda fue evolucionando con el tiempo</p>
-		<p>Sin lugar a dudas hay que aprenderlo para ir mejorando la calidad de las paginas web que utilizamos.</p>
+		<p>Sin lugar a dudas hay que aprenderlo para ir mejorando la calidad de las paginas Web que utilizamos.</p>
 
 
 
