Agrego una Lista

--- a/Practica_2formato_html.html
+++ b/Practica_2formato_html.html
@@ -34,13 +34,12 @@
 
 
     <h4>La lista debe ir desde la letra "z" hasta la "w" (descendente)</h4>
-
-
-        z. Elemento 1
-        y. Elemento 2
-        x. Elemento 3
-        w. Elemento 4
-
+        <ol> type="a">
+            z. Elemento 1
+            y. Elemento 2
+            x. Elemento 3
+            w. Elemento 4
+        </ol>
     <h4>La lista debe ir desde 1 hasta 4</h4>
 
 
