--- a/Practica_2formato_html.html
+++ b/Practica_2formato_html.html
@@ -34,11 +34,13 @@
 
 
     <h4>La lista debe ir desde la letra "z" hasta la "w" (descendente)</h4>
-        <ol> type="a">
-            z. Elemento 1
-            y. Elemento 2
-            x. Elemento 3
-            w. Elemento 4
+        <ol type="A">
+
+            <li>K. Elemento 1</li> 
+            <li>L. Elemento 2</li>
+            <li>M. Elemento 3</li>
+            <li>N. Elemento 4</li>
+            
         </ol>
     <h4>La lista debe ir desde 1 hasta 4</h4>
 
