--- a/Practica_format_html.html
+++ b/Practica_format_html.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Título principal de la practica HTML</h1>   
-	<p>Estamos aprendiendo HTML y necesitamos practicar para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar </p>
+	<p>Estamos aprendiendo HTML y <strong><u>"NECESITAMOS PRACTICAR"</u></strong>  para que se nos fije el conocimiento, en poco tiempo voy a poder maquetar un sitio web completo. en este documento de practica veremos los distintos HTML que podemos encontrar </p>
 
 	  <h2>Primero HTML semántico</h2>.  
 		<p>HTML Semántico es el uso de las etiquetas HTML para reforzar la semántica, o el significado, de la información en las páginas web más que simplemente redefinir su forma de presentación (apariencia). El HTML semántico es procesado por los navegadores web regulares así como por muchos otros agentes de usuarios. Las CSS son usadas para sugerir la presentación de la página a usuarios humanos.</p>
